tests/ui/parser/recover/recover-enum2.stderr
error: expected type, found `{`
  --> $DIR/recover-enum2.rs:6:18
   |
LL |         Var3 {
   |         ---- while parsing this struct
LL |             abc: {},
   |                  ^ expected type

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `{`
  --> $DIR/recover-enum2.rs:25:22
   |
LL |         enum Test4 {
   |              ----- while parsing this enum
LL |             Nope(i32 {})
   |                      ^ expected one of 7 possible tokens
   |
   = help: enum variants can be `Variant`, `Variant = <integer>`, `Variant(Type, ..., TypeN)` or `Variant { fields: Types }`

error: expected item, found `}`
  --> $DIR/recover-enum2.rs:28:1
   |
LL | }
   | ^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 3 previous errors

